# komak-moshaver

./: .gitignore  .pyrightconfig  9199328173.pkl  9212031469.pkl  9212396361.json  9212396361.pkl  9373990837.json  9373990837.pkl  README.md  alireza.pkl  alireza2.pkl  amlak.tar  cert.crt  cert.key  checked_links.txt  db.sqlite3  divar.py  docker-compose-prod.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  dump.rdb  nginx.conf  package-lock.json  package.json  pyrightconfig.json  pytest.ini  requirements.txt  sara.pkl  test1.pkl  valiasr@87.107.165.126
backend/: .dockerignore  Dockerfile  README.md  divar.py  entrypoint.sh  liara.json  pyproject.toml  requirements.txt  setup_cron.py
backend/agents_m/: admin.py  auth.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/amlak/: celery.py  settings.py  urls.py
backend/customer/: admin.py  apps.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/dashboard/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/file/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/listing/: serializers.py  urls.py  views.py
backend/logs/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/tests/: conftest.py  pytest.ini  test_call_log.py  test_decorators.py  test_file_customer_status_after_delete.py  test_file_recovery.py  test_file_tasks.py  test_image_entery.py  test_location_entery.py  test_new_customers.py  test_new_files.py  test_related_customers.py  tests.md  (+4 more)
(+397 files in other folders)
