[project]
name = "asr"
version = "0.1.0"
description = "whisper ASR"
authors = [
    {name = "Alireza Amini",email = "alireza.4mini@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
librosa = "^0.10.0"
soundfile = "^0.12.1"
noisereduce = "^1.0.0"
faster-whisper = "^0.7.1"
numpy = "^1.24.3"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
